# ROS2-Workshop

./: .gitignore  README.md  compose.yaml
docker/: Dockerfile  entrypoint.sh
docs/: pattern_schema.md  workshop_notebook.md
host_agent/: README.md  __main__.py  pyproject.toml
host_agent/host_agent/: __main__.py  serial_repl.py  server.py
host_agent/host_agent/backends/: __init__.py  mock_backend.py  real_backend_skeleton.py  spike_ble_backend.py  spike_usb_backend.py
host_agent/host_agent/tools/: spike_usb_smoketest.py
patterns/deprecated/presets/: melody_scale.yaml
patterns/presets/: melody_call_response.yaml  score_back_and_forth_groove.yaml  score_call_response.yaml  score_melody_scale.yaml  score_motor_basic.yaml
ros2_ws/src/spike_workshop_hw/: package.xml  setup.cfg  setup.py
ros2_ws/src/spike_workshop_hw/spike_workshop_hw/: http_client.py  hw_client_node.py
ros2_ws/src/spike_workshop_instrument/: package.xml  setup.cfg  setup.py
ros2_ws/src/spike_workshop_instrument/config/patterns/: example_clock.yaml  example_dance.yaml
ros2_ws/src/spike_workshop_instrument/launch/: instrument.launch.py
ros2_ws/src/spike_workshop_instrument/spike_workshop_instrument/: behaviors.py  instrument_node.py  pattern_schema.py  pattern_templates.py  score_utils.py  sequence_loader.py
ros2_ws/src/spike_workshop_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/spike_workshop_interfaces/srv/: GeneratePattern.srv  GenerateScore.srv  PlayPattern.srv
ros2_ws/src/spike_workshop_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/spike_workshop_tools/resource/: spike_workshop_tools
ros2_ws/src/spike_workshop_tools/spike_workshop_tools/: __init__.py  pattern_menu.py
scripts/: pattern_wizard.py  play_pattern.sh  preflight.sh  run.sh  start_host_agent_usb.sh
