<?xml version="1.0"?>
<package format="3">
  <name>spike_workshop_hw</name>
  <version>0.1.0</version>
  <description>ROS 2 hardware client node that bridges /spike/cmd to host-agent HTTP API.</description>
  <maintainer email="workshop@example.com">Workshop Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
