<?xml version="1.0"?>
<package format="3">
  <name>spike_workshop_tools</name>
  <version>0.1.0</version>
  <description>Interactive ROS tools for workshop pattern generation and playback.</description>
  <maintainer email="workshop@example.com">Workshop Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>spike_workshop_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
